# ChangeLog for x11-libs/cairo
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.163 2008/02/21 14:43:19 cardoe Exp $

  21 Feb 2008; Doug Klima <cardoe@gentoo.org>
  -files/cairo-1.5.4-fix-private.patch:
  remove stale patch

*cairo-1.5.10 (21 Feb 2008)

  21 Feb 2008; Doug Klima <cardoe@gentoo.org> +cairo-1.5.10.ebuild:
  latest snapshot release

*cairo-1.5.8 (21 Feb 2008)

  21 Feb 2008; Doug Klima <cardoe@gentoo.org> +cairo-1.5.8.ebuild:
  appears I forgot to commit 1.5.8

*cairo-1.5.6 (16 Jan 2008)
*cairo-1.4.14 (16 Jan 2008)

  16 Jan 2008; Doug Klima <cardoe@gentoo.org>
  -files/cairo-1.5.4-sparc-alignment.patch, +cairo-1.4.14.ebuild,
  -cairo-1.5.4-r1.ebuild, -cairo-1.5.4-r2.ebuild, +cairo-1.5.6.ebuild:
  new stable version and development version

*cairo-1.5.4-r2 (08 Jan 2008)

  08 Jan 2008; Doug Klima <cardoe@gentoo.org>
  +files/cairo-1.5.4-fix-private.patch, +cairo-1.5.4-r2.ebuild:
  add patch to fix corruption with Mozilla renderer. From Gentoo's Mozilla
  herd, specifically armin76

*cairo-1.5.4-r1 (27 Dec 2007)

  27 Dec 2007; Doug Klima <cardoe@gentoo.org>
  +files/cairo-1.5.4-sparc-alignment.patch, -cairo-1.5.4.ebuild,
  +cairo-1.5.4-r1.ebuild:
  fix sparc memory alignment issues. fix authored by Chris Wilson (upstream).
  fixes bug #203282

  26 Dec 2007; Raúl Porcel <armin76@gentoo.org> cairo-1.5.4.ebuild:
  Doesn't work fine on sparc, bug #203282

  07 Dec 2007; Doug Klima <cardoe@gentoo.org> cairo-1.5.4.ebuild:
  GNU find is not required on G/BSD as previously reported

  05 Dec 2007; Doug Klima <cardoe@gentoo.org>
  -files/cairo-1.4.6-ctype.patch, -files/cairo-1.4.8-XError.patch,
  -files/cairo-1.4.8-directfb.patch, -cairo-1.4.4.ebuild,
  -cairo-1.4.6.ebuild, -cairo-1.4.8.ebuild:
  remove old versions

*cairo-1.5.4 (05 Dec 2007)

  05 Dec 2007; Doug Klima <cardoe@gentoo.org> -cairo-1.5.2.ebuild,
  +cairo-1.5.4.ebuild:
  new development snapshot
